--- a/initiator/client.cfg
+++ b/initiator/client.cfg
@@ -1,14 +1,17 @@
 # This is a client (initiator)
 [DEFAULT]
-DefaultApplVerID=FIX.4.3
+#DefaultApplVerID=FIX.4.3
+DefaultApplVerID=FIXT.1.1
+#DefaultApplVerID=FIX.5.0.SP2
  #settings which apply to all the Sessions.
 ConnectionType=initiator
  # FIX messages have a sequence ID, which shouldn't be used for uniqueness as specification doesn't guarantee anything about them. If Y is provided every time logon message is sent, server will reset the sequence.
 FileLogPath=./Logs/
  #Path where logs will be written
+UseLocalTime=Y
 StartTime=00:00:00
  # Time when session starts and ends
-EndTime=00:00:00
+EndTime=23:59:00
 UseDataDictionary=Y
  #Time in seconds before your session will expire, keep sending heartbeat requests if you don't want it to expire
 ReconnectInterval=60
@@ -29,11 +32,18 @@ ValidateFieldsOutOfOrder=N
 
 # session definition
 [SESSION]
-BeginString=FIX.4.3
-SenderCompID=TESTINI
-TargetCompID=TESTACC
+#eginString=FIX.4.3
+BeginString=FIXT.1.1
+#BeginString=FIX.5.0.SP2
+SenderCompID=pjseoane232
+OnBehalfCompID=pjseoane232
+TargetCompID=ROFX
 HeartBtInt=30
-SocketConnectPort=8282
-SocketConnectHost=127.0.0.1
-DataDictionary=./spec/FIX43.xml
+SocketConnectPort=9876
+SocketConnectHost='remarket.cloud.primary.com.ar'
+#DataDictionary=./spec/FIX43.xml
+DataDictionary=./spec/FIX50SP2.xml
+#DataDictionary=./spec/FIXT11.xml
+#TransportDataDictionary=./spec/FIX50SP2.xml
+TransportDataDictionary=./spec/FIXT11.xml
 FileStorePath=./Sessions/
