--- a/initiator/ice.cfg
+++ b/initiator/ice.cfg
@@ -39,8 +39,9 @@ SenderCompID=pjseoane232
 OnBehalfCompID=pjseoane232
 TargetCompID=ROFX
 HeartBtInt=30
-SocketConnectPort=9876
-SocketConnectHost='remarket.cloud.primary.com.ar'
+SocketConnectPort=42424
+#SocketConnectHost='remarket.cloud.primary.com.ar'
+SocketConnectHost='127.0.0.1'
 #DataDictionary=./spec/FIX43.xml
 DataDictionary=./spec/FIX50SP2.xml
 #DataDictionary=./spec/FIXT11.xml
